# opengl-playground

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  camera.cpp  camera.h  exceptions.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  objloader.cpp  objloader.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/shaders/basic/: fragment.glsl  vertex.glsl
